api/swimos_schema/src/schema/tests/derive/validated_form/invalid_range.stderr
error: Failed to parse range. Malformatted input at index 3
  --> src/schema/tests/derive/validated_form/invalid_range.rs:20:35
   |
20 |         #[form(schema(int_range = "0...1.."))]
   |                                   ^^^^^^^^^
